<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lopparg</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="start">Start</string>
    <string name="leicht">Leicht</string>
    <string name="medium">Medium</string>
    <string name="schwer">Schwer</string>
    <string name="highscore">Highscore</string>
    <string name="lopparg">LOPPARG</string>
    <string name="spieler">Spieler</string>
    <string name="frei">frei</string>
    <string name="title_activity_schwierigkeit">Schwierigkeit</string>
    <string name="title_activity_highscore">Highscore</string>
    <string name="title_activity_game">Game</string>
    <string-array name="top_spieler">
        <item >1 Platz</item>
        <item >2 Platz</item>
        <item >3 Platz</item>
        <item >4 Platz</item>
        <item >5 Platz</item>
        <item >6 Platz</item>
        <item >7 Platz</item>
        <item >8 Platz</item>
        <item >9 Platz</item>
        <item >10 Platz</item>
    </string-array>

</resources>